# bakobo.com

./: .gitignore  AGENTS.md  CNAME  README.md  index.html  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: pages.yml
assets/css/: site.css  tokens.css
assets/social/: card.html
tests/: test_site.py
